--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.hide {
+  display: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +39,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@media only screen and (min-width: 800px) {
+  
 }
